@@ -11,8 +11,8 @@
             "role": "lead"
         }
     ],
-    "version": "1.1.3",
-    "time": "2019-11-03",
+    "version": "1.1.4",
+    "time": "2022-06-25",
     "repositories": [
         {
             "type": "pear",
