@@ -2,7 +2,8 @@
 v1.1.4
 ------
 
-
+[mjr] Fix detecting if blowfish ciphers are supported when using openssl 3.
+|+
 
 
 ------
